<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:layout_marginBottom="234dp"
        android:backgroundTintMode="add"
        android:text="@string/Iniciar"
        app:backgroundTint="@color/fondocentro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="184dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="111dp"
        android:fontFamily="@font/PurpleSmile"
        android:gravity="center"
        android:text="@string/coloresLocos"
        android:textColor="@color/fondolateral"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>